<resources>
    <string name="app_name">Pirate Run</string>
    <string name="title_activity_maps">Map</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="icon">Icon</string>
    <string name="treasure_hunt">Treasure Hunt</string>
    <string name="scavenge">Scavenge!</string>
    <string name="shop">Shop</string>
    <string name="friends">Friends</string>
    <string name="avatar">Avatar</string>
    <string name="login">Login</string>
    <string name="or_register"><u>or register</u></string>
    <string name="avatars">Avatars</string>
    <string name="ranks">Ranks</string>
    <string name="edit_menu">Edit Menu</string>
    <string name="avatar_image">Avatar Image</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="buy_box_title">Confirm Purchase</string>
    <string name="buy_box_rank_text">Are you sure you want to buy the rank %1$s for %2$d coins?</string>
    <string name="buy_box_avatar_text">Are you sure you want to buy the avatar %1$s for %2$d coins?</string>
    <string name="buy">Buy</string>
    <string name="cancel">Cancel</string>
    <string name="friend_box_title">Add Friend</string>
    <string name="friend_box_text">Do you want to add %1$s as your friend?</string>
    <string name="add_friend">Add friend</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="remove_friend_text">Are you sure you want to remove %1$s from your friends?</string>
    <string name="yes">Yes</string>
    <string name="add_friends">Add friends</string>

    <string name="title_activity_scavenge_map">Map</string>
    <string name="permission_required_toast">Permission required</string>
    <string name="location_permission_denied">Location Permission denied</string>
    <string name="permission_rationale_location">Location Permission Denied</string>

    <string name="i_m_there">I\'M THERE</string>
    <string name="km_radius">km radius</string>
    <string name="treasure_hunt_description">Try to find a nearby treasure by just looking at a photo of where it\'s buried! Just place a marker when ye\'re there, pirate!</string>
    <string name="start">Start</string>
    <string name="victory_message">Congratulations, you won!</string>
    <string name="main_menu">Main Menu</string>
    <string name="radius_title">RADIUS</string>
    <string name="chest_title">CHESTS</string>
    <string name="coin_title">COINS</string>
    <string name="share_radius">Share radius</string>
    <string name="player2_name">Waiting for Player</string>
    <string name="player_2_image_description">Player 2 image</string>
    <string name="player1_name">YOU</string>
    <string name="player_1_image_description">Player 1 image</string>
    <string name="start_game">CREATE GAME</string>
    <string name="ready_button_text">ready</string>
    <string name="scavenge_tooltip_1">Hide your chests!</string>
    <string name="scavenge_tooltip_2">chests remaining.</string>
    <string name="buy_button_text">Buy</string>
    <string name="radiusHint">Radius</string>
    <string name="shopTitle">Pirate Shop</string>
    <string name="details">Details</string>
    <string name="no_friends_yet">You have no friends added yet!</string>
    <string name="create_new_account">Create new account</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create account</string>
    <string name="register">Register</string>

    <string name="google_maps_image">Google Maps Image</string>
</resources>