<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.example.piraterun.ui.profile.ProfileViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileActivity">

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_editText"
            android:autofillHints="@string/email" />

        <ImageView
            android:id="@+id/profile_avatar"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_pirate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/avatar_image"
            android:clickable="true"/>

        <EditText
            android:id="@+id/username_editText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_avatar"
            android:autofillHints="@string/username" />

        <Spinner
            android:id="@+id/rank_spinner"
            android:layout_width="200dp"
            android:layout_height="44dp"
            android:layout_marginTop="44dp"
            android:dropDownWidth="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_editText" />

        <Spinner
            android:id="@+id/avatar_spinner"
            android:layout_width="200dp"
            android:layout_height="44dp"
            android:layout_marginTop="44dp"
            android:dropDownWidth="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rank_spinner" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar_spinner" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>